<resources>
    <string name="app_name">Instagran</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="reels">Reels</string>
    <string name="tienda">Tienda</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>